--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,10 @@ body {
     /* font-size: 15px; */
 }
 
-.me-img {
-    background-img: url("images/gabbie.png");
-    background-size: cover;
+.avatar {
     width: 150px;
     border-radius: 20px;
     box-shadow: 2px 2px #EF798A;
-}
-
-.me-img:hover {
-    background: #7D82B8;
 }
 
 .card {
